--- a/02moveShear.html
+++ b/02moveShear.html
@@ -48,6 +48,8 @@ var timer = null;
 		timer = setInterval(function(){
 			var speed = Math.floor((end - oDiv.offsetLeft)/20);
 			
+			var speed = (end - oDiv.offsetLeft)/20;
+			speed = (speed > 0) ? Math.ceil(speed ) : Math.floor(speed);
 			if (oDiv.offsetLeft == end) {
 				clearInterval(timer);
 			}else{
