--- a/Tab/Tab.html
+++ b/Tab/Tab.html
@@ -255,8 +255,9 @@
 		//获取当前高亮的li的索引、
 		var index = 0;
 		var timer = null;
-
+		//选中所有的li
 		var oLis = $('title').getElementsByTagName('li');
+		//选中所有的内容
 		var oItems = $('content').getElementsByTagName('div');
 
 		if(oLis.length != oItems.length) return;
@@ -265,16 +266,19 @@
 			oLis[i].id = i;
 			oLis[i].onmouseover = function(){
 				var that = this;
+				//如果存在定时器，先关闭
 				if(timer){
 					clearTimeout(timer);
 					timer = null;
 				}
-				//延迟半秒执行
+				//设置定时器
 				timer = window.setTimeout(function(){
+					//先给每个li的类名设为空
 					for (var j = 0; j < oLis.length; j++) {
 						oLis[j].className = '';
 						oItems[j].style.display = 'none';
 					}
+					//设置当前选中的li的类名并且对应的内容展现
 					oLis[that.id].className='selected';
         			oItems[that.id].style.display='block';
 				},0)
