商城之注册页面
注册页面

--- a/E-shop/register.html
+++ b/E-shop/register.html
@@ -7,6 +7,41 @@
 <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
-	
+	<div class="header">
+		<div class="logoBar">
+			<div class="comWidth">
+				<div class="logo left">
+					<img src="images/logo.png" alt="">
+				</div>
+				<h3 class="welcome-text">欢迎登录</h3>
+			</div>
+		</div>
+	</div>
+	<div class="regBox">
+		<ul class="regForm">
+			<li>
+				<input class="user" type="text" placeholder='账户名' required/>
+			</li>
+			<li>
+				<input class="psw" type="text" placeholder='密码' required/>
+			</li>
+			<li>
+				<input type="text" placeholder='在次输入密码'/>
+			</li>
+			<li>
+				<input type="text" placeholder='邮箱'/> 
+			</li>
+			<li>
+				<input type="text" placeholder='地址'/>
+			</li>
+			<li class="agree">
+				<input  id="a1" type="checkbox"><label for="a1" >我已经阅读并统一</label><span>《 用户注册协议》</span>
+			</li>
+			<li>
+				<a href="" class="login-btn">立即注册</a>
+			</li>
+		</ul>
+
+	</div>
 </body>
 </html>
