增加三种简单动画

--- a/FullPage/index.html
+++ b/FullPage/index.html
@@ -20,9 +20,65 @@
 		</div>
 	</header>
 	<div class="main">
-		<div class="section s1">第一屏</div>
-		<div class="section s2">第二屏</div>
-		<div class="section s3">第三屏</div>
+		<div class="section s1">
+			<img src="./images/wenzi.png" alt="">
+		</div>
+		<div class="section s2">
+			<div class="left">
+				<ul>
+					<li>
+	                	<img src="./images/img1.png">
+	                    <p>望<br/>30*40cm / 40*50cm</p>
+	                    <a href="#"></a>                    
+	                </li>
+	                <li>
+	                	<img src="./images/img2.png">
+	                    <p>听<br/>30*40cm / 40*50cm</p>
+	                    <a href="#"></a>                    
+	                </li>
+	                <li>
+	                	<img src="./images/img3.png">
+	                    <p>悟<br/>30*40cm / 40*50cm</p>
+	                    <a href="#"></a>                    
+	                </li>
+				</ul>
+			</div>
+			<div class="right">
+				<h1>观止</h1>
+	            <p>价格：99元起<br/>
+	            艺术家：吉祥物语</p>
+				<a href="#">站酷主页</a>
+			</div>
+		</div>
+		<div class="section s3">
+			<div class="left">
+	        	<ul>
+	            	<li>
+	                	<img src="images/img4.png">
+	                    <p>Love<br/>50*60cm</p>
+	                    <a href="#"></a>                    
+	                </li>
+	                <li>
+	                	<img src="images/img5.png">
+	                    <p>Filial and eros aw<br/>50*60cm</p>
+	                    <a href="#"></a>                    
+	                </li>
+	                <li>
+	                	<img src="images/img6.png">
+	                    <p>Good Time<br/>50*60cm</p>
+	                    <a href="#"></a>                    
+	                </li>
+	            </ul>
+	        </div>
+	        
+	        <div class="right">
+	        	<h1>KIDS</h1>
+	            <p>价格：249元<br/>艺术家：Chow-Lee</p>
+				<a href="#">站酷主页</a>
+	        </div>
+	        
+	        <div class="bg"><img src="images/sc3.png"></div>
+		</div>
 		<div class="section s4">第四屏</div>
 		<div class="section s5">第五屏</div>
 	</div>
